infra/kubernetes/frontend/weasel-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weasel-frontend
  name: weasel-frontend
  namespace: weasel-frontend
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: weasel-frontend
  template:
    metadata:
      labels:
        app: weasel-frontend
    spec:
      # serviceAccountName: weasel-eks-pod-sa
      containers:
      - image: harbor.kkamji.net/weasel-frontend/frontend-image:1.0
        name: weasel-frontend
        # envFrom:
        # - secretRef:
        #     name: weasel-frontend-secret
        resources:
          requests:
            cpu: "50m"
            memory: "150Mi"
          limits:
            cpu: "100m"
            memory: "300Mi"
      imagePullSecrets:
      - name: harbor-regcred
      # volumes:
      # - name: weasel-secrets
      #   csi:
      #     driver: secrets-store.csi.k8s.io
      #     readOnly: true
      #     volumeAttributes:
      #       secretProviderClass: weasel-secrets
