infra/kubernetes/frontend/weasel-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weasel-frontend
  name: weasel-frontend-service
  namespace: weasel-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: weasel-frontend
  type: LoadBalancer
